# cookest-backend

./: .env.example  .gitignore  AGENTS.md  API_ROUTES.json  Cargo.toml  README.md  README.pt-PT.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: publish-ghcr.yml
ai/: README.md  nutrition_reference.md
ai/finetune/: config.yaml  export_gguf.sh  prepare_dataset.py  train_qlora.py
ai/models/: Modelfile.chat
ai/rag/: chunk.py  ingest.py  requirements.txt
ai/scraper/: README.md  european_recipe_websites.json  european_sites.json  requirements.txt  scraper.py
crates/app-api/: .env.example  Cargo.toml  Dockerfile  test_ilike.rs
crates/app-api/src/: config.rs  db.rs  main.rs
crates/app-api/src/entity/: household.rs  household_invite.rs  household_member.rs  ingredient.rs  inventory_deduction.rs  knowledge_chunk.rs  meal_plan_suggestion.rs  meal_poll.rs  meal_poll_option.rs  meal_poll_vote.rs  mod.rs  notification.rs  osm_store_poi.rs  shopping_list_item.rs  store_promotion.rs  store_promotion_candidate.rs  stripe_processed_event.rs  user.rs  user_push_token.rs
crates/app-api/src/handlers/: admin.rs  admin_ingredient.rs  auth.rs  browse.rs  chat.rs  eat_out.rs  household.rs  import.rs  ingredient.rs  meal_poll.rs  mod.rs  notification.rs  nutrition.rs  onboarding.rs  recipe.rs  recipe_gen.rs  shopping_list.rs  store.rs  subscription.rs  suggestion.rs  taste_profile.rs  user.rs
crates/app-api/src/middleware/: auth.rs  mod.rs
crates/app-api/src/models/: ingredient.rs  inventory.rs  mod.rs  recipe.rs  user.rs
crates/app-api/src/services/: auth.rs  chat.rs  chat_tools.rs  email.rs  embeddings.rs  household.rs  ingredient.rs  interaction.rs  inventory.rs  meal_plan.rs  meal_plan_suggestion.rs  meal_poll.rs  mod.rs  notification.rs  nutrition.rs  onboarding.rs  preference.rs  pricing.rs  profile.rs  push_token.rs  recipe.rs  recipe_gen.rs  scan.rs  shopping_list.rs  store.rs  subscription.rs  taste_profile.rs  token.rs
crates/app-api/src/validation/: auth.rs
crates/dataset-importer/: Cargo.toml
crates/dataset-importer/src/: main.rs
crates/food-api/: .env.example  Cargo.toml  Dockerfile
crates/food-api/seed/: ingredients.csv
crates/food-api/src/: config.rs  db.rs  errors.rs  main.rs
crates/food-api/src/entity/: api_key.rs  etl_scrape_log.rs  ingredient.rs  ingredient_alias.rs  ingredient_allergen.rs  mod.rs  recipe.rs  recipe_image.rs  recipe_step.rs
crates/food-api/src/handlers/: import.rs  ingredient.rs  mod.rs  recipe.rs
crates/food-api/src/middleware/: api_key.rs  mod.rs  security_headers.rs
crates/food-api/src/models/: ingredient.rs  recipe.rs
crates/food-api/src/services/: fatsecret.rs  import.rs  ingredient.rs  mod.rs  openfoodfacts.rs  recipe.rs  seed.rs  time_region.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  db.rs  errors.rs  lib.rs  validation.rs
crates/shared/src/middleware/: rate_limit.rs
data/imports/: example-ingredients.csv
deploy/: install-cookest.sh  pve-create-lxc.sh  setup-ollama.sh
docs/: BUILD_AND_USAGE.md  BUILD_AND_USAGE_PT.md
image-gen/: Dockerfile  config.py  deploy.sh  generator.py  main.py  prompts.py  queue.py  requirements.txt  run.py
scripts/: reset_app_ingredient_mirror.sql
src/: config.rs  errors.rs  main.rs
src/entity/: meal_plan_slot.rs  pdf_processing_job.rs  recipe.rs  store.rs  user.rs
src/handlers/: mod.rs  onboarding.rs  recipe.rs  shopping_list.rs  store.rs  subscription.rs  user.rs
src/middleware/: auth.rs
src/models/: recipe.rs
src/services/: auth.rs  chat.rs  meal_plan.rs  mod.rs  onboarding.rs  preference.rs  push_token.rs  recipe.rs  shopping_list.rs  store.rs  subscription.rs  token.rs
