[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# SeaORM - Async ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }
sea-orm-migration = "1.1"

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9"
secrecy = { version = "0.10", features = ["serde"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client (for Ollama API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate Limiting
governor = "0.8"

# UUID for user IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment & Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Cookie handling for refresh tokens
actix-web-httpauth = "0.8"
cookie = { version = "0.18", features = ["secure"] }

# Random for secure token generation
rand = "0.8"

# File upload (multipart/form-data)
actix-multipart = "0.7"

# Base64 encoding (images for Ollama vision model)
base64 = "0.22"

# Cryptographic hashing (Stripe webhook HMAC, token hashing)
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
