[package]
name = "cookest-app-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cookest-shared = { path = "../shared" }

# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }

# Auth & Security
argon2 = "0.5"
jsonwebtoken = "9"
secrecy = { version = "0.10", features = ["serde"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client (for Food API + Ollama)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate Limiting
governor = "0.8"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Cookie handling for refresh tokens
actix-web-httpauth = "0.8"
cookie = { version = "0.18", features = ["secure"] }

# Random
rand = "0.8"

# File upload
actix-multipart = "0.7"

# Base64
base64 = "0.22"

# Crypto
sha2 = "0.10"
hmac = "0.12"

# Slug
slug = "0.1"
