[package]
name = "cookest-food-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate Limiting
governor = "0.8"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Security
sha2 = "0.10"
rand = "0.8"

# Slug generation
slug = "0.1"

# Regex
regex = "1"

# CSV parsing
csv = "1"

# Futures (for middleware)
futures = "0.3"
