[package]
name = "cookest-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
governor = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
